--- a/estilo.css
+++ b/estilo.css
@@ -5,37 +5,44 @@
 
 body{
 	background:rgba(255,255,255,1);
-	color:rgba(25,25,25,1);
-	font-family: 'Poppins', sans-serif;
+	color:rgba(255,255,255,1);
+	font-family: 'Quicksand', sans-serif;
 	font-weight:300;
 }
 
 h1, h2, h3, h4{
-	font-family: 'Montserrat', sans-serif; 
+	font-family: 'Special Elite', 'Cinzel Decorative', sans-serif;
 	font-weight:700;
 }
 
 h1{
-	letter-spacing:0.1em;
+	letter-spacing:0.9em;
 	color:rgba(255,255,255,0.9);
 	text-shadow: 1px 1px 0 #999;
+	font-size:6em;
+	font-weight:500;
 	text-align:center;
 }
 
 h2{
 	letter-spacing:0.02em;
-	color:rgba(255,255,255,0.6);
+	color:rgba(5,49,70,0.6);
+	font-family: 'Quicksand', sans-serif;
+	font-weight:400;
 	padding:0.2em 0;
-	text-shadow: 1px 1px 0 #999;
+	text-shadow: 1px 1px 0 #0;
 	text-align:center;
 }
 
 h3{
 	letter-spacing:0.2em;
-	color:rgba(0,0,0,.75);
+	color:rgba(5,49,70,.75);
 	padding:2em 0 0.6em 0;
 	text-shadow: 1px 1px 0 #ccc;
 	text-align:center;
+	font-size:2em;
+	font-weight:300;
+
 }
 
 h4, h5, h6{
@@ -81,20 +88,20 @@ video{
 	}
 
 .dupla a{
-	color:rgba(255,0,0,0.75);
+	color:rgba(132,132,132,0.75);
 	text-decoration:none;
 	font-weight:700;
 }
 
 .dupla a:hover{
-	color:rgba(255,0,0,1);
+	color:rgba(255,255,255,1);
 	text-decoration:underline;
 }
 
 .primera{
 	min-height:300px;
 	text-align:left;
-	background-color:rgba(241,230,210,1);
+	background-color:rgba(109,60,66,1);
 	background-image:url('media/dupla-01.jpg');
 	background-position:top right;
 	background-repeat:no-repeat;
@@ -106,12 +113,12 @@ video{
 
 .primera p{padding: 2% 40% 2% 2%;}
 
-.primera address{padding: 2% 40% 2% 2%; font-size:0.9em; font-style:normal;}
+.primera address{padding: 2% 40% 2% 2%; font-size:0.9em; font-style:normal;float:left;}
 
 .segunda{
 	min-height:300px;
 	text-align:right;
-	background-color:rgba(231,240,239,1);
+	background-color:rgba(252,175,61,1);
 	background-image:url('media/dupla-02.jpg');
 	background-position:top left;
 	background-repeat:no-repeat;
@@ -134,7 +141,7 @@ video{
 #portafolio{
 	width:100%;
 	padding-bottom:1%;
-	background:linear-gradient(to bottom right, #F2E6D4, #E7F0EF);
+	background:linear-gradient(to bottom right, #053146, #C48E94);
 }
 
 .item {
@@ -161,15 +168,15 @@ video{
 }
 
 .item:hover figure img{
-	transform:scale(1.25);
 	filter: grayscale(0);
 	transition:all ease-out 0.5s;
 }
 
 .item h4{
-	font-size:1em;
+	font-size:1.5em;
 	letter-spacing:0.025em;
 	margin:5% 5% 3% 5%;
+		color:rgba(196,142,148,.75);
 }
 
 .item p{
@@ -182,8 +189,10 @@ footer{
 	width:100%;
 	padding:3em 0 1em 0;
 	text-align:center;
-	font-family: 'Montserrat', sans-serif;
+	color:rgba(109,60,66,0.75);
+	font-family: 'Special Elite', sans-serif;
 	font-weight:700;
+	font-size:2em;
 }
 
 footer p{
@@ -193,7 +202,7 @@ footer p{
 	}
 
 footer hr{
-	border:2px solid #000;
+	border:2px solid #A4B8B0;
 	width:10%;
 	margin:2em auto 0 auto;
 	}
